--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # # Byte-compiled / optimized / DLL files
-# __pycache__/
+__pycache__/
 # *.py[cod]
 # *$py.class
 
@@ -58,8 +58,8 @@
 # # Django stuff:
 # *.log
 # local_settings.py
-# db.sqlite3
-# db.sqlite3-journal
+db.sqlite3
+db.sqlite3-journal
 
 # # Flask stuff:
 # instance/
