--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "frontend": "file:",
-    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
