--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 __pycache__/
 *.pyc
 *.sqlite3
-migrations/
-backend/uploads/
 # *.py[cod]
 # *$py.class
 
@@ -189,3 +187,6 @@ frontend/node_modules/
 /.idea
 backend/backend/local_settings.py
 /.idea
+
+backend/uploads/
+backend/solicitacoes_app/utils/credentials.json
