--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ frontend/node_modules/
 backend/backend/local_settings.py
 backend/uploads/
 backend/solicitacoes_app/utils/credentials.json
+backend/solicitacoes_app/migrations/0001_initial.py
