--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.pyc
 *.sqlite3
 migrations/
+*/migrations/*
+migrations/*
+*/migrations
+*/migrations/
 # *.py[cod]
 # *$py.class
 
@@ -191,5 +195,3 @@ frontend/node_modules/
 backend/backend/local_settings.py
 backend/uploads/
 backend/solicitacoes_app/utils/credentials.json
-backend/solicitacoes_app/migrations/0001_initial.py
-backend/solicitacoes_app/migrations/0001_initial.py
