--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "frontend": "file:",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
